# MyIRC-EPI-2017-2018

./: CMakeLists.txt
client/build-c_myirc-KIT-Debug/: Makefile  c_myirc  moc_mainwindow.cpp  ui_mainwindow.h
client/c_myirc/: ApiConnection.cpp  ApiConnection.hpp  c_myirc.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
server/include/: server.h
server/src/: broadcast.c  channels.c  client.c  client_room_manager.c  cmd.c  cmd_manager.c  connexion.c  create_server.c  error.c  main.c  main_loop.c  message_format.c  parse_arg.c  send_msg.c  user_cmd.c
